gobbledegook_sources = [
    'DBusInterface.cpp',
    'DBusInterface.h',
    'DBusMethod.cpp',
    'DBusMethod.h',
    'DBusObject.cpp',
    'DBusObject.h',
    'DBusObjectPath.h',
    'GattCharacteristic.cpp',
    'GattCharacteristic.h',
    'GattDescriptor.cpp',
    'GattDescriptor.h',
    'GattInterface.cpp',
    'GattInterface.h',
    'GattProperty.cpp',
    'GattProperty.h',
    'GattService.cpp',
    'GattService.h',
    'GattUuid.h',
    'Globals.h',
    'Gobbledegook.cpp',
    'HciAdapter.cpp',
    'HciAdapter.h',
    'HciSocket.cpp',
    'HciSocket.h',
    'Init.cpp',
    'Init.h',
    'Logger.cpp',
    'Logger.h',
    'Mgmt.cpp',
    'Mgmt.h',
    'Server.cpp',
    'Server.h',
    'ServerUtils.cpp',
    'ServerUtils.h',
    'TickEvent.h',
    'Utils.cpp',
    'Utils.h',
]

gobbledegook_lib = static_library(
    'gobbledegook', 
    gobbledegook_sources,
    dependencies: [
        dependency('glib-2.0', version: '>= 2.68.0' , fallback: ['glib', 'libglib_dep']),
        dependency('gmodule-2.0', fallback: ['glib', 'libgmodule_dep']),
        dependency('gio-2.0', fallback: ['glib', 'libgio_dep'])
        ]
)
